syntax = "proto3";
package gravity.v2;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/peggyjv/gravity-bridge/module/v2/x/gravity/types";

// EVMEventVoteRecord is an event that is pending of confirmation by 2/3 of
// the signer set. The event is then attested and executed in the state machine
// once the required threshold is met.
message EVMEventVoteRecord {
  google.protobuf.Any event = 1
  [ (cosmos_proto.accepts_interface) = "EVMEvent" ];
  repeated string votes = 2;
  bool accepted = 3;
  uint32 chain_id = 4;
}

// LatestEVMBlockHeight defines the latest observed EVM block height
// and the corresponding timestamp value in nanoseconds.
message LatestEVMBlockHeight {
  uint64 EVM_height = 1;
  uint64 cosmos_height = 2;
  uint32 chain_id = 3;
}

// EVMSigner represents a cosmos validator with its corresponding bridge
// operator EVM address and its staking consensus power.
message EVMSigner {
  uint64 power = 1;
  string EVM_address = 2;
  uint32 chain_id = 3;
}

// SignerSetTx is the EVM Bridge multisig set that relays
// transactions the two chains. The staking validators keep EVM keys which
// are used to check signatures on EVM in order to get significant gas
// savings.
message SignerSetTx {
  uint64 nonce = 1;
  uint64 height = 2;
  repeated EVMSigner signers = 3
  [ (gogoproto.castrepeated) = "EVMSigners" ];
  uint32 chain_id = 4;
}

// BatchTx represents a batch of transactions going from Cosmos to EVM.
// Batch txs are are identified by a unique hash and the token contract that is
// shared by all the SendToEVM
message BatchTx {
  uint64 batch_nonce = 1;
  uint64 timeout = 2;
  repeated SendToEVM transactions = 3;
  string token_contract = 4;
  uint64 height = 5;
  uint32 chain_id = 6;
}

// SendToEVM represents an individual SendToEVM from Cosmos to
// EVM
message SendToEVM {
  uint64 id = 1;
  string sender = 2;
  string EVM_recipient = 3;
  ERC20Token erc20_token = 4 [ (gogoproto.nullable) = false ];
  ERC20Token erc20_fee = 5 [ (gogoproto.nullable) = false ];
  uint32 chain_id = 6;
}

// ContractCallTx represents an individual arbitrary logic call transaction
// from Cosmos to EVM.
message ContractCallTx {
  uint64 invalidation_nonce = 1;
  bytes invalidation_scope = 2;
  string address = 3;
  bytes payload = 4;
  uint64 timeout = 5;
  repeated ERC20Token tokens = 6 [ (gogoproto.nullable) = false ];
  repeated ERC20Token fees = 7 [ (gogoproto.nullable) = false ];
  uint64 height = 8;
  uint32 chain_id = 9;
}

message ERC20Token {
  string contract = 1;
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  uint32 chain_id = 3;
}

message IDSet { repeated uint64 ids = 1; }

message CommunityPoolEthereumSpendProposal {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  string recipient = 3;
  cosmos.base.v1beta1.Coin amount = 4 [ (gogoproto.nullable) = false ];
  cosmos.base.v1beta1.Coin bridge_fee = 5 [ (gogoproto.nullable) = false ];
  uint32 chain_id = 6;
}

// This format of the community spend Ethereum proposal is specifically for
// the CLI to allow simple text serialization.
message CommunityPoolEthereumSpendProposalForCLI {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = true;

  string title = 1 [ (gogoproto.moretags) = "yaml:\"title\"" ];
  string description = 2 [ (gogoproto.moretags) = "yaml:\"description\"" ];
  string recipient = 3 [ (gogoproto.moretags) = "yaml:\"recipient\"" ];
  string amount = 4 [ (gogoproto.moretags) = "yaml:\"amount\"" ];
  string bridge_fee = 5 [ (gogoproto.moretags) = "yaml:\"bridge_fee\"" ];
  string deposit = 6 [ (gogoproto.moretags) = "yaml:\"deposit\"" ];
  uint32 chain_id = 7;
}
